<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gray_round"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_12dp"
    android:paddingTop="@dimen/padding_16dp">

    <TextView
        android:id="@+id/clear_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_queue"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        style="@style/CustomTextStyle20spBold"/>

    <TextView
        android:id="@+id/clear_queue_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        style="@style/CustomTextStyle16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_12dp"
            android:paddingEnd="@dimen/padding_24dp"
            android:text="@string/cancel"
            android:background="?android:selectableItemBackground"
            style="@style/CustomSearchStyleBold" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingHorizontal="@dimen/padding_24dp"
            android:text="@string/clear"
            android:background="?android:selectableItemBackground"
            android:textColor="?attr/textColorHighlight"
            style="@style/CustomSearchStyleBold" />
    </LinearLayout>
</LinearLayout>