<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_20dp"
    android:paddingBottom="@dimen/padding_16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_exit_app"
        android:layout_marginTop="@dimen/margin_8dp"
        style="@style/CustomTextStyle16sp"
        android:textColor="@color/purple_text"
        android:textSize="@dimen/size_20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_44dp"
            android:layout_marginEnd="@dimen/padding_8dp"
            android:layout_weight="1"
            android:background="@drawable/background_highlight_round"
            android:backgroundTint="?attr/exitIconBackground"
            android:gravity="center"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:text="@string/exit"
            style="@style/CustomTextHighlightStyle16spSemiBold"
            android:textColor="?attr/textColor" />

        <TextView
            android:id="@+id/text_cancel"
            style="@style/CustomTextHighlightStyle16spSemiBold"
            android:textColor="@color/white_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_44dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@drawable/background_highlight_round"
            android:gravity="center"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:text="@string/cancel" />


    </LinearLayout>
</LinearLayout>