<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gray_round"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_16dp"
    android:paddingBottom="@dimen/padding_12dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_playlist"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        style="@style/CustomTextStyle20spBold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/corner_all_radius"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:paddingHorizontal="@dimen/padding_8dp"
        android:paddingVertical="@dimen/padding_8dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textCursorDrawable="@drawable/color_cursor"
            android:hint="@string/enter_playlist_name"
            android:inputType="text"
            android:maxLines="1"
            style="@style/CustomSearchStyleMedium"
            android:textColor="?attr/textColor"
            android:textColorHint="@color/light_purple_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_close"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_text_name"
            app:layout_constraintBottom_toBottomOf="@id/edit_text_name"
            android:src="@drawable/icon_close" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/cancel"
            android:background="?android:selectableItemBackground"
            style="@style/CustomSearchStyleBold" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingHorizontal="@dimen/padding_24dp"
            android:text="@string/ok"
            android:textColor="?attr/textColorHighlight"
            android:background="?android:selectableItemBackground"
            style="@style/CustomSearchStyleBold" />
    </LinearLayout>
</LinearLayout>